src/test/ui/malformed/malformed-regressions.stderr
error: malformed `doc` attribute input
  --> $DIR/malformed-regressions.rs:1:1
   |
LL | #[doc]
   | ^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[doc(hidden|inline|...)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
LL | #[doc = "string"]
   | ^^^^^^^^^^^^^^^^^

error: malformed `ignore` attribute input
  --> $DIR/malformed-regressions.rs:3:1
   |
LL | #[ignore()]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[ignore]
   | ^^^^^^^^^
LL | #[ignore = "reason"]
   | ^^^^^^^^^^^^^^^^^^^^

error: malformed `inline` attribute input
  --> $DIR/malformed-regressions.rs:5:1
   |
LL | #[inline = ""]
   | ^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[inline]
   | ^^^^^^^^^
LL | #[inline(always|never)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: malformed `link` attribute input
  --> $DIR/malformed-regressions.rs:7:1
   |
LL | #[link]
   | ^^^^^^^ help: must be of the form: `#[link(name = "...", /*opt*/ kind = "dylib|static|...", /*opt*/ cfg = "...")]`

error: malformed `link` attribute input
  --> $DIR/malformed-regressions.rs:9:1
   |
LL | #[link = ""]
   | ^^^^^^^^^^^^ help: must be of the form: `#[link(name = "...", /*opt*/ kind = "dylib|static|...", /*opt*/ cfg = "...")]`

error: aborting due to 5 previous errors

